backflow module (r_i'=r_i + sum n(r_ij)(r_i-r_j), where n is neural net and r_ij is expanded in gaussian basis) added and moved conv_index from nn.schnet to nn.base.

--- a/notebooks/dev-zs.ipynb
+++ b/notebooks/dev-zs.ipynb
@@ -57,9 +57,10 @@
     "from tensorboardX import SummaryWriter\n",
     "\n",
     "from dlqmc.nn.base import * \n",
+    "from dlqmc.nn.base import conv_indexing\n",
     "from dlqmc.geom import *\n",
     "from dlqmc.nn.gto import *\n",
-    "from dlqmc.nn import *\n",
+    "#from dlqmc.nn import *\n",
     "from dlqmc.sampling import langevin_monte_carlo, hmc ,samples_from\n",
     "from dlqmc.fit import *\n",
     "from dlqmc.nn.anti import *\n",
@@ -463,7 +464,7 @@
     "    )\n",
     "else:\n",
     "    sampler = langevin_monte_carlo(\n",
-    "        gtowf,\n",
+    "        net,\n",
     "        torch.randn(1000, n_electrons, 3, device='cuda'),\n",
     "        tau=0.1,\n",
     "    )"
@@ -502,12 +503,11 @@
     "            range_training=partial(trange, desc='training steps', leave=False),\n",
     "        ),\n",
     "    clip_grad = None,\n",
-    "    exclude_below = 0,\n",
     "    writer = SummaryWriter(f'runs/'),\n",
     "    )\n",
     "\n",
     "fit_wfnet(\n",
-    "    net2,\n",
+    "    net,\n",
     "    partial(loss_local_energy, E_ref=None,p=1),\n",
     "    torch.optim.Adam(net.parameters(), lr=1e-3),\n",
     "    wfnet_fit_driver(\n",
@@ -534,10 +534,8 @@
    "source": [
     "x_line = torch.cat((torch.linspace(-5, 5, 5000)[:, None], torch.zeros((5000, 3*n_electrons-1))), dim=1)\n",
     "x_line[:,3]=h2.coords[1][0]/2\n",
-    "x_line=x_line.view(-1,n_electrons,3)#.cuda()\n",
+    "x_line=x_line.view(-1,n_electrons,3).cuda()\n",
     "x_line.requires_grad = True\n",
-    "gtowf\n",
-    "\n",
     "normed=True\n",
     "#normplot(x_line[:,0 , 0].cpu().detach().numpy(), torch.exp(net.deep_lin(f_line[0])).squeeze().cpu().detach().numpy(),label=\"sym\",norm=normed)\n",
     "#normplot(x_line[:,0 , 0].cpu().detach().numpy(), net.antisym(x_line).cpu().detach().numpy(),label=\"anti\",norm=normed)\n",
@@ -546,7 +544,7 @@
     "#normplot(x_line[:,0,0].cpu().detach().numpy(),-1*(N*x_line[:,0,0].cpu().detach().numpy()),label=\"asym*line\",norm=normed)\n",
     "#d=net(x_line).cpu().detach().numpy()\n",
     "#D.append(d)\n",
-    "normplot(x_line[:,0 , 0].cpu().detach().numpy(), gtowf(x_line).cpu().detach().numpy(),label=\"WF\",norm=normed,lw=2,color='k')\n",
+    "normplot(x_line[:,0 , 0].cpu().detach().numpy(), net(x_line).cpu().detach().numpy(),label=\"WF\",norm=normed,lw=2,color='k')\n",
     "\n",
     "plt.axhline(0,ls=':',color='k')\n",
     "plt.axvline(0,ls=':',color='k')\n",
@@ -907,60 +905,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dlqmc.utils import nondiag\n",
-    "\n",
-    "class Backflow(nn.Module):\n",
-    "      \n",
-    "    def __init__(\n",
-    "        self,\n",
-    "        n_up,\n",
-    "        n_down,\n",
-    "        n_interactions,\n",
-    "        basis_dim\n",
-    "    ):\n",
-    "            \n",
-    "        super().__init__()\n",
-    "        def interaction_factory(basis_dim):\n",
-    "                modules = {\n",
-    "                    'interact': get_log_dnn(basis_dim, 1, SSP, n_layers=4, last_bias=False),\n",
-    "                }\n",
-    "                return nn.ModuleDict(modules)\n",
-    "            \n",
-    "        self.interactions = nn.ModuleList(\n",
-    "            [\n",
-    "                interaction_factory(basis_dim)\n",
-    "                for _ in range(n_interactions)\n",
-    "            ])\n",
-    "        \n",
-    "        self.dist_basis = DistanceBasis(basis_dim)\n",
-    "            \n",
-    "    def forward(self,rs, debug=NULL_DEBUG):\n",
-    "        xs = rs.clone()\n",
-    "        for i, interaction in enumerate(self.interactions):\n",
-    "            dists_basis = self.dist_basis(pairwise_distance(xs,xs))\n",
-    "            *batch_dims, n_elec, n_elec, basis_dim = dists_basis.shape\n",
-    "            c_i, c_j, c_shape = self._conv_indexing(n_elec, n_elec, batch_dims)\n",
-    "            dists_basis = dists_basis[..., c_i, c_j, :]\n",
-    "            Ws = interaction.interact(dists_basis)\n",
-    "            zs = (Ws.view(*c_shape) * (xs[:, c_j].view(*c_shape)-xs[:,:,None,:])).sum(dim=2)\n",
-    "            xs = xs + zs\n",
-    "        return xs\n",
-    "    \n",
-    "    @staticmethod\n",
-    "    def _conv_indexing(n_elec, n_all, batch_dims):\n",
-    "        i, j = np.mask_indices(n_all, nondiag)\n",
-    "        n = n_elec * (n_all - 1)\n",
-    "        i, j = i[:n], j[:n]\n",
-    "        shape = (*batch_dims, n_elec, n_all - 1, -1)\n",
-    "        return i, j, shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import numpy as np\n",
     "import torch\n",
     "from torch import nn\n",
@@ -971,6 +915,7 @@
     "from dlqmc.nn.base import BaseWFNet\n",
     "from dlqmc.nn.base import DistanceBasis\n",
     "from dlqmc.nn.gto import GTOBasis\n",
+    "from dlqmc.nn.backflow import Backflow\n",
     "\n",
     "\n",
     "class HFNet(BaseWFNet):\n",
@@ -980,7 +925,7 @@
     "        self.register_geom(geom)\n",
     "        self.basis = basis\n",
     "        self.mo = nn.Linear(basis.dim, max(n_up, n_down), bias=False)\n",
-    "        self.backflow = Backflow(n_up, n_down,n_interactions,20)\n",
+    "        self.backflow = Backflow(n_up, n_down,n_interactions,4,20)\n",
     "\n",
     "    def init_from_pyscf(self, mf):\n",
     "        mo_coeff = mf.mo_coeff.copy()\n",
@@ -1071,7 +1016,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for net,sampler in zip([net0,net1,net3],[sampler0,sampler1,sampler3]):\n",
+    "for net,sampler in zip([net1,net3],[sampler1,sampler3]):\n",
     "    fit_wfnet(\n",
     "        net,\n",
     "        partial(loss_local_energy, E_ref=-1.1,p=2),\n",
@@ -1122,7 +1067,7 @@
     "\n",
     "\n",
     "normed=True\n",
-    "normplot(x_line[:,0 , 0].cpu().detach().numpy(), net0(x_line).cpu().detach().numpy(),label=\"WF0\",norm=normed,lw=2)\n",
+    "#normplot(x_line[:,0 , 0].cpu().detach().numpy(), net0(x_line).cpu().detach().numpy(),label=\"WF0\",norm=normed,lw=2)\n",
     "normplot(x_line[:,0 , 0].cpu().detach().numpy(), net1(x_line).cpu().detach().numpy(),label=\"WF1\",norm=normed,lw=2)\n",
     "normplot(x_line[:,0 , 0].cpu().detach().numpy(), net3(x_line).cpu().detach().numpy(),label=\"WF3\",norm=normed,lw=2)\n",
     "plt.axhline(0,ls=':',color='k')\n",
