update jh notebook

--- a/notebooks/dl-qmc-jh.ipynb
+++ b/notebooks/dl-qmc-jh.ipynb
@@ -47,11 +47,13 @@
     "    SSP,\n",
     "    DistanceBasis,\n",
     "    GTOBasis,\n",
+    "    GTOShell,\n",
     "    HanNet,\n",
     "    HFNet,\n",
     "    WFNet,\n",
     "    get_custom_dnn,\n",
     "    get_log_dnn,\n",
+    "    pairwise_diffs,\n",
     "    pairwise_distance,\n",
     "    pairwise_self_distance,\n",
     ")\n",
@@ -517,6 +519,101 @@
     ")\n",
     "plt.legend(loc='lower center', bbox_to_anchor=(0.5, -0.35), ncol=2)\n",
     "plt.ylim(-1.5, None)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### GTO cusp correction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mol = gto.M(\n",
+    "    atom=geomdb['H2+'].as_pyscf(),\n",
+    "    unit='bohr',\n",
+    "    basis='cc-pvtz',\n",
+    "    cart=True,\n",
+    "    charge=1,\n",
+    "    spin=1,\n",
+    ")\n",
+    "mf = scf.RHF(mol)\n",
+    "mf.kernel()\n",
+    "gtowf = HFNet.from_pyscf(mf).cuda()\n",
+    "gtowf_corr = HFNet.from_pyscf(mf, cusp_correction=0.5).cuda()\n",
+    "gtowf_corr.mo_coeff.weight.requires_grad_(False);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bounds = [-.5, 2]\n",
+    "plot_func_x(gtowf.orbitals, bounds, device='cuda', density=0.002)\n",
+    "plot_func_x(gtowf_corr.orbitals, bounds, device='cuda', density=0.002)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_func_x(lambda x: local_energy(x[:, None], gtowf)[0], [-3, 3], device='cuda', density=0.002)\n",
+    "plot_func_x(lambda x: local_energy(x[:, None], gtowf_corr)[0], [-3, 3], device='cuda', density=0.002)\n",
+    "plt.ylim((-10, 10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sampler = langevin_monte_carlo(gtowf_corr, torch.randn(1_000, 1, 3, device='cuda'), tau=0.1)\n",
+    "for _ in range(50):\n",
+    "    next(sampler)\n",
+    "with SummaryWriter('runs/H2+/hfnet_cusp/04') as writer:\n",
+    "    fit_wfnet(\n",
+    "        gtowf_corr,\n",
+    "        loss_local_energy,\n",
+    "        torch.optim.Adam(gtowf_corr.parameters(), lr=3e-3),\n",
+    "        wfnet_fit_driver_simple(sampler, n_sampling_steps=1, samplings=trange(500)),\n",
+    "        writer=writer,\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_walker = 1_000\n",
+    "sampler = langevin_monte_carlo(gtowf, torch.randn(n_walker, 1, 3).cuda(), tau=0.1)\n",
+    "rs, psis, info = samples_from(sampler, trange(500))\n",
+    "E_loc = local_energy(rs.flatten(end_dim=1), gtowf)[0].view(n_walker, -1)\n",
+    "E_loc[:, 50:].mean().item(), (E_loc[:, 50:].mean(dim=1).std() / np.sqrt(E_loc.shape[0])).item()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_walker = 1_000\n",
+    "sampler = langevin_monte_carlo(gtowf_corr, torch.randn(n_walker, 1, 3).cuda(), tau=0.1)\n",
+    "rs, psis, info = samples_from(sampler, trange(500))\n",
+    "E_loc = local_energy(rs.flatten(end_dim=1), gtowf_corr)[0].view(n_walker, -1)\n",
+    "E_loc[:, 50:].mean().item(), (E_loc[:, 50:].mean(dim=1).std() / np.sqrt(E_loc.shape[0])).item()"
    ]
   },
   {
