--- a/notebooks/dl-qmc-jh.ipynb
+++ b/notebooks/dl-qmc-jh.ipynb
@@ -112,7 +112,7 @@
     ")\n",
     "mf = scf.RHF(mol)\n",
     "scf_energy_big = mf.kernel()\n",
-    "gtowf_big = HFNet.from_pyscf(mf).cuda()"
+    "gtowf_big = HFNet.from_pyscf(mf, cusp_correction=False).cuda()"
    ]
   },
   {
@@ -131,7 +131,7 @@
     ")\n",
     "mf = scf.RHF(mol)\n",
     "scf_energy = mf.kernel()\n",
-    "gtowf = HFNet.from_pyscf(mf).cuda()"
+    "gtowf = HFNet.from_pyscf(mf, cusp_correction=False).cuda()"
    ]
   },
   {
@@ -140,7 +140,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_func_x(gtowf.basis, [-7, 7], device='cuda')\n",
+    "plot_func_x(lambda x: gtowf.basis(pairwise_diffs(x, gtowf.coords)), [-7, 7], device='cuda')\n",
     "plt.ylim(-1, 1)"
    ]
   },
@@ -150,7 +150,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_func_x(gtowf_big.basis, [-7, 7], device='cuda')\n",
+    "plot_func_x(lambda x: gtowf_big.basis(pairwise_diffs(x, gtowf_big.coords)), [-7, 7], device='cuda')\n",
     "plt.ylim(-1, 1)"
    ]
   },
@@ -363,7 +363,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Net WF"
+    "### DL WFs"
    ]
   },
   {
@@ -372,7 +372,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "_ = plot_func(DistanceBasis(32), [1, 11])"
+    "class AsympNet(BaseWFNet):\n",
+    "    def __init__(self, geom, ion_pot=0.5):\n",
+    "        super().__init__()\n",
+    "        self.register_geom(geom)\n",
+    "        self.asymp_nuc = NuclearAsymptotic(self.charges, ion_pot)\n",
+    "        \n",
+    "    def forward(self, rs):\n",
+    "        dists_nuc = pairwise_distance(rs, self.coords[None, ...])\n",
+    "        asymp_nuc = self.asymp_nuc(dists_nuc)\n",
+    "        return asymp_nuc"
    ]
   },
   {
@@ -381,10 +390,71 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "fix, axes = plt.subplots(2, 1)\n",
+    "_ = plot_func(DistanceBasis(32), [0, 11], ax=axes[0])\n",
+    "_ = plot_func(DistanceBasis(32, envelope='nocusp'), [0, 11], ax=axes[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mol = gto.M(\n",
+    "    atom=geomdb['H2+'].as_pyscf(),\n",
+    "    unit='bohr',\n",
+    "    basis='6-311g',\n",
+    "    cart=True,\n",
+    "    charge=1,\n",
+    "    spin=1,\n",
+    ")\n",
+    "mf = scf.RHF(mol)\n",
+    "mf.kernel()\n",
+    "gtowf = HFNet.from_pyscf(mf, cusp_correction=False).cuda()\n",
+    "gtowf_cusp = HFNet.from_pyscf(mf).cuda()\n",
     "wfnet = WFNet(geomdb['H2+'], 1, n_orbital_layers=4, ion_pot=0.7).cuda()\n",
-    "sampler = langevin_monte_carlo(wfnet, torch.randn(1_000, 1, 3, device='cuda'), tau=0.1)\n",
-    "for _ in range(50):\n",
-    "    next(sampler)\n",
+    "asympnet = AsympNet(geomdb['H2+'], ion_pot=0.7).cuda()\n",
+    "\n",
+    "class Orbnet(nn.Module):\n",
+    "    def __init__(self, features_in, n_orbitals):\n",
+    "        super().__init__()\n",
+    "        self.net = get_log_dnn(\n",
+    "            features_in, n_orbitals, SSP, n_layers=4, last_bias=False\n",
+    "        )\n",
+    "\n",
+    "    def forward(self, mos, xs):\n",
+    "        return mos * torch.exp(self.net(xs.flatten(start_dim=1)))\n",
+    "        \n",
+    "\n",
+    "hfnet = HFNet.from_pyscf(mf, orbnet_factory=Orbnet).cuda()\n",
+    "hfnet.mo_coeff.weight.requires_grad_(False);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gtowf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gtowf_cusp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "wfnet"
    ]
   },
@@ -394,17 +464,55 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fit_wfnet_multi(\n",
-    "    wfnet,\n",
-    "    (partial(loss_local_energy, E_ref=-0.5), loss_local_energy),\n",
-    "    (torch.optim.Adam(wfnet.parameters(), lr=3e-3) for _ in range(2)),\n",
-    "    partial(wfnet_fit_driver_simple, sampler, n_sampling_steps=1),\n",
-    "    (\n",
-    "        {'samplings': trange(200, desc='pretrain')},\n",
-    "        {'samplings': trange(2000, desc='variance')},\n",
-    "    ),\n",
-    "    (SummaryWriter(f'runs/H+/wfnet/05/{s}') for s in ['pretrain', 'variance']),\n",
-    ")"
+    "hfnet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bounds = [-2, 2]\n",
+    "plot_func_x(gtowf.orbitals, bounds, device='cuda', density=0.002, label='GTO')\n",
+    "plot_func_x(gtowf_cusp.orbitals, bounds, device='cuda', density=0.002, label='GTO w/ cusp')\n",
+    "plot_func_x(lambda x: 0.4*wfnet.debug('asymp_nuc', x[:, None]), bounds, device='cuda', label='asymptotics')\n",
+    "plt.legend(loc='lower center', bbox_to_anchor=(0.5, -0.35), ncol=2)\n",
+    "plt.yscale('log')\n",
+    "plt.ylim(0.25, None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bounds = [-5, 5]\n",
+    "plot_func_x(lambda x: local_energy(x[:, None], gtowf)[0], bounds, device='cuda', density=0.002, label='GTO')\n",
+    "plot_func_x(lambda x: local_energy(x[:, None], gtowf_cusp)[0], bounds, device='cuda', density=0.002, label='GTO w/ cusp')\n",
+    "plot_func_x(lambda x: local_energy(x[:, None], asympnet)[0], bounds, device='cuda', density=0.002, label='asymptotics')\n",
+    "plt.legend(loc='lower center', bbox_to_anchor=(0.5, -0.35), ncol=2)\n",
+    "plt.ylim((-2, 0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sampler = langevin_monte_carlo(wfnet, torch.randn(1_000, 1, 3, device='cuda'), tau=0.1)\n",
+    "for _ in range(50):\n",
+    "    next(sampler)\n",
+    "with SummaryWriter('runs/H2+/wfnet/11') as writer:\n",
+    "    fit_wfnet(\n",
+    "        wfnet,\n",
+    "        loss_local_energy,\n",
+    "        torch.optim.Adam(wfnet.parameters(), lr=3e-3),\n",
+    "        wfnet_fit_driver_simple(sampler, n_sampling_steps=1, samplings=trange(2000)),\n",
+    "        writer=writer,\n",
+    "    )"
    ]
   },
   {
@@ -522,13 +630,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### GTO cusp correction"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -537,16 +638,29 @@
     "mol = gto.M(\n",
     "    atom=geomdb['H2+'].as_pyscf(),\n",
     "    unit='bohr',\n",
-    "    basis='cc-pvtz',\n",
+    "    basis='6-311g',\n",
     "    cart=True,\n",
     "    charge=1,\n",
     "    spin=1,\n",
     ")\n",
     "mf = scf.RHF(mol)\n",
     "mf.kernel()\n",
-    "gtowf = HFNet.from_pyscf(mf).cuda()\n",
-    "gtowf_corr = HFNet.from_pyscf(mf, cusp_correction=0.5).cuda()\n",
-    "gtowf_corr.mo_coeff.weight.requires_grad_(False);"
+    "gtowf = HFNet.from_pyscf(mf, cusp_correction=False).cuda()\n",
+    "gtowf_cusp = HFNet.from_pyscf(mf).cuda()\n",
+    "\n",
+    "class Orbnet(nn.Module):\n",
+    "    def __init__(self, features_in, n_orbitals):\n",
+    "        super().__init__()\n",
+    "        self.net = get_log_dnn(\n",
+    "            features_in, n_orbitals, SSP, n_layers=4, last_bias=False\n",
+    "        )\n",
+    "\n",
+    "    def forward(self, mos, xs):\n",
+    "        return mos * torch.exp(self.net(xs.flatten(start_dim=1)))\n",
+    "        \n",
+    "\n",
+    "hfnet = HFNet.from_pyscf(mf, orbnet_factory=Orbnet).cuda()\n",
+    "hfnet.mo_coeff.weight.requires_grad_(False);"
    ]
   },
   {
@@ -557,7 +671,8 @@
    "source": [
     "bounds = [-.5, 2]\n",
     "plot_func_x(gtowf.orbitals, bounds, device='cuda', density=0.002)\n",
-    "plot_func_x(gtowf_corr.orbitals, bounds, device='cuda', density=0.002)"
+    "plot_func_x(gtowf_cusp.orbitals, bounds, device='cuda', density=0.002)\n",
+    "plot_func_x(hfnet.orbitals, bounds, device='cuda', density=0.002)"
    ]
   },
   {
@@ -566,9 +681,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_func_x(lambda x: local_energy(x[:, None], gtowf)[0], [-3, 3], device='cuda', density=0.002)\n",
-    "plot_func_x(lambda x: local_energy(x[:, None], gtowf_corr)[0], [-3, 3], device='cuda', density=0.002)\n",
-    "plt.ylim((-10, 10))"
+    "bounds = [-15, 15]\n",
+    "plot_func_x(lambda x: local_energy(x[:, None], gtowf)[0], bounds, device='cuda', density=0.002)\n",
+    "plot_func_x(lambda x: local_energy(x[:, None], gtowf_cusp)[0], bounds, device='cuda', density=0.002)\n",
+    "plot_func_x(lambda x: local_energy(x[:, None], hfnet)[0], bounds, device='cuda', density=0.002)\n",
+    "plt.ylim((-2, 0))"
    ]
   },
   {
@@ -577,15 +694,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sampler = langevin_monte_carlo(gtowf_corr, torch.randn(1_000, 1, 3, device='cuda'), tau=0.1)\n",
+    "bounds = [-3, 3]\n",
+    "plot_func_x(lambda x: local_energy(x[:, None], gtowf)[0], bounds, device='cuda', density=0.002)\n",
+    "plot_func_x(lambda x: local_energy(x[:, None], gtowf_cusp)[0], bounds, device='cuda', density=0.002)\n",
+    "plot_func_x(lambda x: local_energy(x[:, None], hfnet)[0], bounds, device='cuda', density=0.002)\n",
+    "plt.ylim((-4, 0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sampler = langevin_monte_carlo(hfnet, torch.randn(1_000, 1, 3, device='cuda'), tau=0.1)\n",
     "for _ in range(50):\n",
     "    next(sampler)\n",
-    "with SummaryWriter('runs/H2+/hfnet_cusp/04') as writer:\n",
+    "with SummaryWriter('runs/H2+/hfnet/23') as writer:\n",
     "    fit_wfnet(\n",
-    "        gtowf_corr,\n",
+    "        hfnet,\n",
     "        loss_local_energy,\n",
-    "        torch.optim.Adam(gtowf_corr.parameters(), lr=3e-3),\n",
-    "        wfnet_fit_driver_simple(sampler, n_sampling_steps=1, samplings=trange(500)),\n",
+    "        torch.optim.Adam(hfnet.parameters(), lr=3e-3),\n",
+    "        wfnet_fit_driver_simple(sampler, n_sampling_steps=1, samplings=trange(2000)),\n",
     "        writer=writer,\n",
     "    )"
    ]
@@ -596,11 +726,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_walker = 1_000\n",
-    "sampler = langevin_monte_carlo(gtowf, torch.randn(n_walker, 1, 3).cuda(), tau=0.1)\n",
-    "rs, psis, info = samples_from(sampler, trange(500))\n",
-    "E_loc = local_energy(rs.flatten(end_dim=1), gtowf)[0].view(n_walker, -1)\n",
-    "E_loc[:, 50:].mean().item(), (E_loc[:, 50:].mean(dim=1).std() / np.sqrt(E_loc.shape[0])).item()"
+    "plot_func_x(lambda x: local_energy(x[:, None], hfnet)[0], [-15, 15], device='cuda')\n",
+    "plt.ylim((-1, 0))"
    ]
   },
   {
@@ -610,10 +737,42 @@
    "outputs": [],
    "source": [
     "n_walker = 1_000\n",
-    "sampler = langevin_monte_carlo(gtowf_corr, torch.randn(n_walker, 1, 3).cuda(), tau=0.1)\n",
-    "rs, psis, info = samples_from(sampler, trange(500))\n",
-    "E_loc = local_energy(rs.flatten(end_dim=1), gtowf_corr)[0].view(n_walker, -1)\n",
-    "E_loc[:, 50:].mean().item(), (E_loc[:, 50:].mean(dim=1).std() / np.sqrt(E_loc.shape[0])).item()"
+    "sampler = langevin_monte_carlo(\n",
+    "    hfnet, torch.randn(n_walker, 1, 3, device='cuda'), tau=0.1\n",
+    ")\n",
+    "rs, _, info = samples_from(sampler, trange(500))\n",
+    "E_loc = local_energy(rs.flatten(end_dim=1), hfnet)[0].view(n_walker, -1)\n",
+    "info.acceptance.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.hist(E_loc[:, 50:].flatten().clamp(-1.25, 0).cpu().numpy(), bins=100)\n",
+    "plt.xlim(-1.25, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "E_loc[:, 50:].std()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scf_energy_big, E_loc[:, 50:].mean().item(), (\n",
+    "    E_loc[:, 50:].mean(dim=1).std() / np.sqrt(E_loc.shape[0])\n",
+    ").item()"
    ]
   },
   {
