[pub] update paper

--- a/pub/preamble.tex
+++ b/pub/preamble.tex
@@ -34,13 +34,14 @@
 }
 \makeatother
 
-% \usepackage{authblk}
-% \renewcommand\Affilfont{\itshape\small} % chktex 6
+\usepackage{authblk}
+\renewcommand\Affilfont{\itshape\small} % chktex 6
 
-% \author[1,2]{Jan Hermann}
-% \author[1]{Zeno Schätzle}
-% \author[1]{Frank Noé}
-% \affil[1]{}
+\author[1,2]{Jan Hermann}
+\author[1]{Zeno Schätzle}
+\author[1]{Frank Noé}
+\affil[1]{FU Berlin, Department of Mathematics and Computer Science, Arnimallee 6, 14195 Berlin, Germany}
+\affil[2]{TU Berlin, Machine Learning Group, Marchstr. 23, 10587 Berlin, Germany}
 
 \date{}
 
