--- a/pub/preprint.tex
+++ b/pub/preprint.tex
@@ -23,11 +23,11 @@
 
 \input{text.tex}
 
-% \begingroup
-% \setlength\bibsep{0pt}
-% \renewcommand{\section}[2]{}
-% \footnotesize
-% \bibliography{refs-zotero}
-% \endgroup
+\begingroup
+\setlength\bibsep{0pt}
+\renewcommand{\section}[2]{}
+\footnotesize
+\bibliography{refs-zotero}
+\endgroup
 
 \end{document}
